--- a/index.html
+++ b/index.html
@@ -224,6 +224,135 @@
         <!-- Happy Clients Section -->
         <section class="mt-28">
             <h3 class="text-center text-5xl font-semibold">Happy <span class="text-bike-primary">Clients says</span></h3>
+            <div class="mt-12 p-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+                <!-- Review 1 -->
+                <div class="card bg-base-100 p-9 border-2 border-gray-400">
+                    <figure>
+                      <img src="images/others/user-1.png"
+                        alt="user" class="w-36"/>
+                    </figure>
+                    <div class="card-body mt-7">
+                      <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+                        <div class="rating mt-4 justify-center">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input
+                              type="radio"
+                              name="rating-2"
+                              class="mask mask-star-2 bg-orange-400"
+                              checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                          </div>
+                      <div class="text-center mt-4 space-y-4">
+                         <h4 class="font-semibold text-[#23A6F0]">Regina Miles</h4>
+                         <p>Banker</p>
+                      </div>
+                    </div>
+                </div>
+                <!-- Review 2 -->
+                <div class="card bg-base-100 p-9 border-2 border-gray-400">
+                    <figure>
+                      <img src="images/others/user-2.png"
+                        alt="user" class="w-36"/>
+                    </figure>
+                    <div class="card-body mt-7">
+                      <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+                        <div class="rating mt-4 justify-center">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input
+                              type="radio"
+                              name="rating-2"
+                              class="mask mask-star-2 bg-orange-400"
+                              checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                          </div>
+                      <div class="text-center mt-4 space-y-4">
+                         <h4 class="font-semibold text-[#23A6F0]">Regina Miles</h4>
+                         <p>Banker</p>
+                      </div>
+                    </div>
+                </div>
+                <!-- Review 3 -->
+                <div class="card bg-base-100 p-9 border-2 border-gray-400">
+                    <figure>
+                      <img src="images/others/user-1.png"
+                        alt="user" class="w-36"/>
+                    </figure>
+                    <div class="card-body mt-7">
+                      <p>Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+                        <div class="rating mt-4 justify-center">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input
+                              type="radio"
+                              name="rating-2"
+                              class="mask mask-star-2 bg-orange-400"
+                              checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                          </div>
+                      <div class="text-center mt-4 space-y-4">
+                         <h4 class="font-semibold text-[#23A6F0]">Regina Miles</h4>
+                         <p>Banker</p>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Frequently Asked Question -->
+        <section class="mt-28">
+            <h3 class="text-center text-5xl font-semibold">Frequently Asked <span class="text-bike-primary">Questions</span></h3>
+            <div class="hero min-h-screen mt-10">
+                <div class="hero-content gap-10 flex-col lg:flex-row">
+                  <img
+                    src="images/others/faq.png"
+                    class="max-w-sm rounded-lg shadow-2xl" />
+                    <!-- Faq Question -->
+                  <div>
+                    <div class="collapse collapse-arrow ">
+                        <input type="radio" name="my-accordion-2" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">What are the most important things I should know about riding a bike?</div>
+                        <div class="collapse-content">
+                          <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow ">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a new one?</div>
+                        <div class="collapse-content">
+                          <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow ">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                        <div class="collapse-content">
+                          <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow ">
+                        <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">What rules should I follow when riding my bike?</div>
+                        <div class="collapse-content">
+                          <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+            </div>
+
         </section>
     </main>
     <footer>
