--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <!-- Review 3 -->
                 <div class="card bg-base-100 p-9 border-2 border-gray-400">
                     <figure>
-                      <img src="images/others/user-1.png"
+                      <img src="images/others/user-3.png"
                         alt="user" class="w-36"/>
                     </figure>
                     <div class="card-body mt-7">
@@ -314,7 +314,7 @@
         <!-- Frequently Asked Question -->
         <section class="mt-28">
             <h3 class="text-center text-5xl font-semibold">Frequently Asked <span class="text-bike-primary">Questions</span></h3>
-            <div class="hero min-h-screen mt-10">
+            <div class="hero mt-10 p-9">
                 <div class="hero-content gap-10 flex-col lg:flex-row">
                   <img
                     src="images/others/faq.png"
@@ -355,9 +355,30 @@
 
         </section>
     </main>
-    <footer>
-
-    </footer>
+    <footer class="footer bg-neutral text-neutral-content p-10">
+        <aside class="space-y-6">
+            <div class="flex gap-6">
+                <p>Download Now</p>
+                <p>License</p>
+            </div>
+            <div class="flex gap-6">
+                <a href="">About</a>
+                <a href="">Feature</a>
+                <a href="">Pricing</a>
+                <a href="">Careers</a>
+                <a href="">Help</a>
+                <a href="">Privacy Policy</a>
+            </div>
+            <p>© 2020 bike. All rights reserved</p>
+        </aside>
+        <nav>
+          <h6 class="footer-title">Get The App</h6>
+          <div class="grid grid-cols-1 gap-4">
+            <a><img class="w-36" src="images/others/android.png" alt=""></a>
+            <a><img class="w-36" src="images/others/ios.png" alt=""></a>
+          </div>
+        </nav>
+      </footer>
 </body>
 
 </html>
